--- a/index.html
+++ b/index.html
@@ -6,100 +6,160 @@
         <title>Storyteller</title>
         <link href="https://fonts.googleapis.com/css?family=Gill+Sans" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <script src="js/gamemaster.js"></script>
+        <script src="js/player.js"></script>
+        <script src="js/enemy.js"></script>
     </head>
     <body>
         <div class="header">
             <p>Welcome to Storyteller, the greatest fighting RPG ever made!</p>
             <h2>Choose your champion!</h2>
         </div>
-        <div class="interface">
-            <a href="#">
-                <img src="img/avatar-player/captain-falcon.png" alt="Captain Falcom">
+        <div class="interface" onclick="">
+            <a href="#" onclick="GameMaster.setGameStart('Captain Falcon')">
+                <img src="img/avatar-player/captain-falcon.png" alt="Captain Falcon">
                 <div>
                     <h3>Captain Falcon</h3>
-                    <p></p>
+                    <p>A regular pilot in the great galactic race F-ZERO Grand Prix, Captain Falcon is skilled at collecting prize money. Much about his past remains hidden in shadow, but it's clear that many a villain hold a powerful grudge against him.  Falcon is a powerful attacker with high speed, but his subpar defenses don't help with his predictable attacks.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Donkey Kong')">
                 <img src="img/avatar-player/donkey-kong.png" alt="Donkey Kong">
                 <div>
                     <h3>Donkey Kong</h3>
-                    <p>The largest character in our roster, Donkey Kong shows some incredible strength in attack, though he appears to be somewhat sluggish.</p>
+                    <p>Donkey Kong and Mario started out as arch-rivals, but they've patched things up in recent years.  These days DK spends his time searching the jungle for bananas instead of kidnapping beautiful maidens.  In the past few years, other members of the Kong family have cashed in on DK's fame as well, including his favorite nephew, Diddy.  The largest character in our roster, Donkey Kong shows some incredible attack power and good defenses, though he appears to be somewhat sluggish as a result.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStary('Falco')">
+                <img src="img/avatar-player/falco.png" alt="Falco">
+                <div>
+                    <h3>Falco</h3>
+                    <p></p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStart('Fox')">
                 <img src="img/avatar-player/fox.png" alt="Fox">
                 <div>
                     <h3>Fox</h3>
+                    <p>Following his dead father's footsteps as the young leader of the Star Fox Team, Fox McCloud's piloting of the super-high-performance combat ship Arwing for the Lylat System is still fresh in our memories.  His one weakness may be his difficulty earning the trust of his teammates, besides his okay defenses.  An ace pilot, he's a brave fighter that boasts high attack and speed.</p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStary('Ice Climbers')">
+                <img src="img/avatar-player/ice-climbers.png" alt="Ice Climbers">
+                <div>
+                    <h3>Ice Climbers</h3>
                     <p></p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Jigglypuff')">
                 <img src="img/avatar-player/jigglypuff.png" alt="Jigglypuff">
                 <div>
                     <h3>Jigglypuff</h3>
-                    <p></p>
+                    <p>Jigglypuff is the balloon Pokémon with big round eyes.  She sings a soothing melody, sending those that hear it to sleep. When mad, she puffs itself up.  Her body is light, weak, and easy to knock away.  As a result, her high special is crucial given her weaker attack, speed, and defense stats.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Kirby')">
                 <img src="img/avatar-player/kirby.png" alt="Kirby">
                 <div>
                     <h3>Kirby</h3>
-                    <p></p>
+                    <p>The 8-inch high Kirby hails from a distant, peaceful star.  Like his simplistic appearance, he is an easily understood character.  True to his instincts, Kirby eats when he gets hungry and sleeps as soon as he grows tired.  Nevertheless, Kirby remains a formidable opponent.  In addition to his distinct flying and swallowing skills, he also has the ability to copy enemy attacks for ever-changing action.  The pink puffball is light with low defenses and attack but very high special.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Link')">
                 <img src="img/avatar-player/link.png" alt="Link">
                 <div>
                     <h3>Link</h3>
-                    <p></p>
+                    <p>Link is the valiant boy hero of "Legend of Zelda" series in which he fights against the evil Ganon to recover the Triforce.  Though his tools may change with each adventure, his strength and righteousness remain constant.  With his trusty sword and a variety of weapons, he takes his adventures head on with good attack and defense but low special.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Luigi')">
                 <img src="img/avatar-player/luigi.png" alt="Luigi">
                 <div>
                     <h3>Luigi</h3>
-                    <p></p>
+                    <p>Though often hidden in his older brother Mario's shadow, Luigi is, in reality, very popular.  Taller than Mario, Luigi also jumps higher.   Appearing in Super Mario Bros., Super Mario World, and Super Smash Bros.,  he performed to the best of his ability.  For one who seems to always be in the background, he has many fans who eagerly await his appearance.  That said, his stats, like Mario's, are spread even, but much lower.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Mario')">
                 <img src="img/avatar-player/mario.png" alt="Mario">
                 <div>
                     <h3>Mario</h3>
-                    <p>Mario is a short, stocky Italian plumber from the Mushroom Kingdom.  Though he can jump high, he's a pretty average guy not excelling in any one stat.</p>
+                    <p>Although best known as the mustachioed plumber who battles the Koopa Troopa with his distinct jumping action, the internationally-famous Mario has also acted as a referee, a driver, and even a doctor!  As a result, his stats are well-balanced across the board.  He's been linked to Princess Peach of Mushroom Kingdom for years, but to this day their true relationship remains a mystery.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStary('Marth')">
+                <img src="img/avatar-player/marth.png" alt="Marth">
+                <div>
+                    <h3>Marth</h3>
+                    <p></p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStart('Ness')">
                 <img src="img/avatar-player/ness.png" alt="Ness">
                 <div>
                     <h3>Ness</h3>
+                    <p>Ness was a seemingly-average kid from Onett, but in truth, he was destined for much more. When a strange meteorite landed near his hometown, the little boy with psychic powers set out to save the world. Little has been said of Ness' character, and much remains hidden.  His PSI powers boast very high special and attack power and good, if unremarkable, defense.</p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStary('Patriot')">
+                <img src="img/avatar-player/patriot.png" alt="Patriot">
+                <div>
+                    <h3>Patriot</h3>
                     <p></p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStary('Peach')">
+                <img src="img/avatar-player/peach.png" alt="Peach">
+                <div>
+                    <h3>Peach</h3>
+                    <p></p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStart('Pikachu')">
                 <img src="img/avatar-player/pikachu.png" alt="Pikachu">
                 <div>
                     <h3>Pikachu</h3>
+                    <p>Pikachu: the yellow Mouse Pokémon.  When several of these Pokémon gather, their electricity could cause lightning storms.  Indeed, this yellow rodent can fire electric shocks from his two red cheek pouches.  While he's very fast and very powerful with high special and attack, Pikachu is a bit of a glass cannon.</p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStary('Roy')">
+                <img src="img/avatar-player/roy.png" alt="Roy">
+                <div>
+                    <h3>Roy</h3>
                     <p></p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Samurai')">
                 <img src="img/avatar-player/samurai.png" alt="Samurai">
                 <div>
-
+                    <h3>Samurai</h3>
+                    <p>A strong warrior from the mountains of Japan, the Samurai is a respector of honor during battle.  He wields his magic sword, the Miyamoto, and he has been known to travel around the countryside on his steed.  Because of his high honor, he prioritizes his attack power over a bit of defense and special.</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Samus')">
                 <img src="img/avatar-player/samus.png" alt="Samus">
                 <div>
                     <h3>Samus</h3>
+                    <p>Samus Aran is the toughest bounty hunter in the galaxy.  Using a special suit powered by the technology of the bird people which allows her to execute daring acrobatic feats, Samus pursues the airborne life form, Metroid, throughout the universe.  When inside her Power Suit, she boasts a high special, great defenses, and high attack power, but at the expense of low speed.</p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStary('Sheik')">
+                <img src="img/avatar-player/sheik.png" alt="Sheik">
+                <div>
+                    <h3>Sheik</h3>
                     <p></p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#" onclick="GameMaster.setGameStart('Yoshi')">
                 <img src="img/avatar-player/yoshi.png" alt="Yoshi">
                 <div>
                     <h3>Yoshi</h3>
+                    <p>Yoshi is the friendly dinosaur of Yoshi's Island. He began as Mario's partner, but has since built his own identity, and now appears in many games. He uses his unique ability to turn whatever he swallows into an egg as his foremost attack. Yoshis come in a rainbow cloud of colors and are said to have a high IQ from a very early age.  While his attack stat is his highest, Yoshi's stats overall aren't all that high.</p>
+                </div>
+            </a>
+            <a href="#" onclick="GameMaster.setGameStary('Zelda')">
+                <img src="img/avatar-player/zelda.png" alt="Zelda">
+                <div>
+                    <h3>Zelda</h3>
                     <p></p>
                 </div>
             </a>
