--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
                 <img src="img/avatar-player/captain-falcon.png" alt="Captain Falcon">
                 <div>
                     <h3>Captain Falcon</h3>
-                    <p>A regular pilot in the great galactic race F-ZERO Grand Prix, Captain Falcon is skilled at collecting prize money. Much about his past remains hidden in shadow, but it's clear that many a villain hold a powerful grudge against him.  Falcon is a powerful attacker with high speed, but his subpar defenses don't help with his predictable attacks.</p>
+                    <p>Usually a relentless bounty hunter, Captain Falcon shifts gears to become a race pilot once great galactic race the F-Zero Grand Prix begins.  His beloved racer, the Blue Falcon, can exceed the speed of sound, and he knows how to drive it; he'll go down as one of the all time-greats.  Now 36 years old, Captain Falcon wears his F-Zero X visor and is skilled at collecting prize money.  Much about his past remains hidden in shadow, but it's clear that many a villain hold a powerful grudge against him.  Falcon is a powerful attacker with high speed, but his subpar defenses don't help with his predictable attacks.</p>
                 </div>
             </a>
             <a href="#" onclick="GameMaster.setGameStart('Donkey Kong')">
                 <img src="img/avatar-player/donkey-kong.png" alt="Donkey Kong">
                 <div>
                     <h3>Donkey Kong</h3>
-                    <p>Donkey Kong and Mario started out as arch-rivals, but they've patched things up in recent years.  These days DK spends his time searching the jungle for bananas instead of kidnapping beautiful maidens.  In the past few years, other members of the Kong family have cashed in on DK's fame as well, including his favorite nephew, Diddy.  The largest character in our roster, Donkey Kong shows some incredible attack power and good defenses, though he appears to be somewhat sluggish as a result.</p>
+                    <p>Donkey Kong and Mario started out as arch-rivals, but they've patched things up in recent years.  These days DK spends his time searching the jungle for bananas instead of kidnapping beautiful maidens.  While he now prefers the laid-back jungle lifestyle to construction site mischief, DK is often forced back into action by the Kremling Krew.  In the past few years, other members of the Kong family have cashed in on DK's fame as well, including his favorite nephew, Diddy.  The great ape is quite fast, if somewhat sluggish, despite his burly physique, and he keeps his strength up with a steady diet of his favorite food: bananas. His one extravagance (and only piece of clothing) is a monogrammed necktie.  The largest character in our roster, Donkey Kong shows some incredible attack power and good defenses.</p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Falco')">
+            <a href="#" onclick="GameMaster.setGameStart('Falco')">
                 <img src="img/avatar-player/falco.png" alt="Falco">
                 <div>
                     <h3>Falco</h3>
-                    <p></p>
+                    <p>Star Fox team pilot, Falco's constant air of casual indifference belies his precise piloting skills.  He avoids discussion of what he did before joining the team, but many consider it likely that his past was filled with reckless behavior.  He's not much for cooperation, but he does respect those more skilled than he is.  While Falco boasts higher speed and attack than Fox, his lower defenses make his recklessness a double-edged sword.</p>
                 </div>
             </a>
             <a href="#" onclick="GameMaster.setGameStart('Fox')">
                 <img src="img/avatar-player/fox.png" alt="Fox">
                 <div>
                     <h3>Fox</h3>
-                    <p>Following his dead father's footsteps as the young leader of the Star Fox Team, Fox McCloud's piloting of the super-high-performance combat ship Arwing for the Lylat System is still fresh in our memories.  His one weakness may be his difficulty earning the trust of his teammates, besides his okay defenses.  An ace pilot, he's a brave fighter that boasts high attack and speed.</p>
+                    <p>Following his dead father's footsteps as the young leader of a band of adventurers-for-hire known as Star Fox, Fox McCloud's piloting of the super-high-performance combat ship Arwing for the Lylat System is still fresh in our memories.  Fox and his fellow pilots Peppy, Slippy, and Falco patrol the Lylat system in their mother ship, the Great Fox.  From the cockpit of his Arwing, Fox leads the ceaseless pursuit of the evil scientist Andross, who doomed Fox's father.  His one weakness may be his difficulty earning the trust of his teammates, besides his subpar defenses.  An ace pilot, he's a brave fighter that boasts high attack and speed.</p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Ice Climbers')">
+            <a href="#" onclick="GameMaster.setGameStart('Ice Climbers')">
                 <img src="img/avatar-player/ice-climbers.png" alt="Ice Climbers">
                 <div>
                     <h3>Ice Climbers</h3>
@@ -55,38 +55,38 @@
                 <img src="img/avatar-player/jigglypuff.png" alt="Jigglypuff">
                 <div>
                     <h3>Jigglypuff</h3>
-                    <p>Jigglypuff is the balloon Pokémon with big round eyes.  She sings a soothing melody, sending those that hear it to sleep. When mad, she puffs itself up.  Her body is light, weak, and easy to knock away.  As a result, her high special is crucial given her weaker attack, speed, and defense stats.</p>
+                    <p>This Balloon Pokémon, Jigglypuff, invites her opponents in close with her big, round eyes and then puts them to sleep with a soothing lullaby.  She puffs herself up when angry, and while she may look adorable and her body is light, weak, and easy to knock away, she's not to be trifled with: she knows several powerful techniques.  Jigglypuff evolves into Wigglytuff after exposure to a Moon Stone.  That said, her high special defense is crucial given her weaker attack, defense, and speed stats.</p>
                 </div>
             </a>
             <a href="#" onclick="GameMaster.setGameStart('Kirby')">
                 <img src="img/avatar-player/kirby.png" alt="Kirby">
                 <div>
                     <h3>Kirby</h3>
-                    <p>The 8-inch high Kirby hails from a distant, peaceful star.  Like his simplistic appearance, he is an easily understood character.  True to his instincts, Kirby eats when he gets hungry and sleeps as soon as he grows tired.  Nevertheless, Kirby remains a formidable opponent.  In addition to his distinct flying and swallowing skills, he also has the ability to copy enemy attacks for ever-changing action.  The pink puffball is light with low defenses and attack but very high special.</p>
+                    <p>The 8-inch high Kirby hails from the far-off, peaceful planet Pop Star and became a citizen of Dream Land after defeating King Dedede..  Like his simplistic appearance, he is an easily understood character.  True to his instincts, Kirby eats when he gets hungry and sleeps as soon as he grows tired.  Nevertheless, Kirby remains a formidable opponent and is an extremely skilled technician.  In addition to his distinct flying and swallowing skills, he also has the ability to  absorb the powers of his enemies and copy their attacks for ever-changing action.  The pink puffball is light with low defense and attack but very high special defense as his elastic body makes him a versatile adventurer.</p>
                 </div>
             </a>
             <a href="#" onclick="GameMaster.setGameStart('Link')">
                 <img src="img/avatar-player/link.png" alt="Link">
                 <div>
                     <h3>Link</h3>
-                    <p>Link is the valiant boy hero of "Legend of Zelda" series in which he fights against the evil Ganon to recover the Triforce.  Though his tools may change with each adventure, his strength and righteousness remain constant.  With his trusty sword and a variety of weapons, he takes his adventures head on with good attack and defense but low special.</p>
+                    <p>Link is the valiant boy hero of "Legend of Zelda" series in which he fights against the evil Ganon to recover the Triforce.  Even in his youth, he was already becoming the warrior who would carry the destiny of Hyrule (and many other lands) on his shoulders.  His epic struggles against the forces of darkness are written in legend, and he is bound to the Princess Zelda and the archfiend Ganondorf by the awesome power of the Triforce.  Though his tools may change with each adventure, his strength and righteousness remain constant.  With his trusty sword and a variety of weapons, he takes his adventures head on with good attack, defense, and special defense but low special attack and low speed.</p>
                 </div>
             </a>
             <a href="#" onclick="GameMaster.setGameStart('Luigi')">
                 <img src="img/avatar-player/luigi.png" alt="Luigi">
                 <div>
                     <h3>Luigi</h3>
-                    <p>Though often hidden in his older brother Mario's shadow, Luigi is, in reality, very popular.  Taller than Mario, Luigi also jumps higher.   Appearing in Super Mario Bros., Super Mario World, and Super Smash Bros.,  he performed to the best of his ability.  For one who seems to always be in the background, he has many fans who eagerly await his appearance.  That said, his stats, like Mario's, are spread even, but much lower.</p>
+                    <p>Although Mario's younger brother has always played second fiddle, Luigi is, in reality, very popular.  Taller than Mario, Luigi also jumps higher.   Appearing in Super Mario Bros., Super Mario World, Super Smash Bros., and his very own game, Luigi's Mansion where he finally garnered the spotlight, he performed to the best of his ability.  For one who seems to always be in the background, he has many fans who eagerly await his appearance.  Things are looking up for the eternal understudy; he's even picked up his own rival in Waluigi.  The day he's referred to as the "lean, mean, green machine" may not be too far off.  That said, his stats, like Mario's, are spread even, but much lower.</p>
                 </div>
             </a>
             <a href="#" onclick="GameMaster.setGameStart('Mario')">
                 <img src="img/avatar-player/mario.png" alt="Mario">
                 <div>
                     <h3>Mario</h3>
-                    <p>Although best known as the mustachioed plumber who battles the Koopa Troopa with his distinct jumping action, the internationally-famous Mario has also acted as a referee, a driver, and even a doctor!  As a result, his stats are well-balanced across the board.  He's been linked to Princess Peach of Mushroom Kingdom for years, but to this day their true relationship remains a mystery.</p>
+                    <p>Although best known as the mustachioed plumber who battles the Koopa Troopa with his distinct jumping ability to thwart the evil Bowser time after time and known worldwide as Mr. Nintendo, the internationally-famous Mario has also acted as a referee, a driver, a golfer, a doctor, and even a villain!  As a result, his stats are well-balanced across the board.  He's been linked to Princess Peach of Mushroom Kingdom for years, but to this day their true relationship remains a mystery.  His tastes have changed over 20 years of gaming; he long ago swapped the colors of his shirt and overalls.</p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Marth')">
+            <a href="#" onclick="GameMaster.setGameStart('Marth')">
                 <img src="img/avatar-player/marth.png" alt="Marth">
                 <div>
                     <h3>Marth</h3>
@@ -97,31 +97,31 @@
                 <img src="img/avatar-player/ness.png" alt="Ness">
                 <div>
                     <h3>Ness</h3>
-                    <p>Ness was a seemingly-average kid from Onett, but in truth, he was destined for much more. When a strange meteorite landed near his hometown, the little boy with psychic powers set out to save the world. Little has been said of Ness' character, and much remains hidden.  His PSI powers boast very high special and attack power and good, if unremarkable, defense.</p>
+                    <p>Ness is a young boy who's mastered the psychic power known as PSI.  Ness was living a normal life in the suburbs of Onett, but in truth, he was destined for much more.  When a meteor crashed into a nearby mountain, the little boy with psychic powers set out on a wild adventure to save the world.  Believing in the ultimate powers of wisdom, courage, and friendship, Ness proves that some heroes come in small packages.  His PSI powers boast very high special defense and special attack power and good, if unremarkable, attack and defense.</p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Patriot')">
+            <a href="#" onclick="GameMaster.setGameStart('Patriot')">
                 <img src="img/avatar-player/patriot.png" alt="Patriot">
                 <div>
                     <h3>Patriot</h3>
                     <p></p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Peach')">
+            <a href="#" onclick="GameMaster.setGameStart('Peach')">
                 <img src="img/avatar-player/peach.png" alt="Peach">
                 <div>
                     <h3>Peach</h3>
-                    <p></p>
+                    <p>Princess Peach presides over the Mushroom Kingdom from her huge castle.  Her loyal subject Toad does his best to protect her but always seems to fail spectacularly.  Besides her royal duties, Peach is interested in both tennis and golf; since she's so magnanimous, she'll even deign to play a few matches with the evil Bowser.  However, Peach works best as a support; although her attack stat is nothing to sneeze at, her defensive stats are much higher.</p>
                 </div>
             </a>
             <a href="#" onclick="GameMaster.setGameStart('Pikachu')">
                 <img src="img/avatar-player/pikachu.png" alt="Pikachu">
                 <div>
                     <h3>Pikachu</h3>
-                    <p>Pikachu: the yellow Mouse Pokémon.  When several of these Pokémon gather, their electricity could cause lightning storms.  Indeed, this yellow rodent can fire electric shocks from his two red cheek pouches.  While he's very fast and very powerful with high special and attack, Pikachu is a bit of a glass cannon.</p>
+                    <p>It's safe to say that Pikachu is the most famous and popular of all Pokémon.  When several of these Pokémon gather, their electricity could cause lightning storms.  Indeed, this yellow Mouse Pokémon can fire electric shocks from his two red cheek pouches.  When in danger, he shoots electricity at his enemies.  Although Pikachu can evolve into Raichu by exposure to a Thunderstone, many trainers like Pikachu so much that they don't let it evolve.  While this Pikachu is very fast and very powerful with high special attack and attack, Pikachu is a bit of a glass cannon.</p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Roy')">
+            <a href="#" onclick="GameMaster.setGameStart('Roy')">
                 <img src="img/avatar-player/roy.png" alt="Roy">
                 <div>
                     <h3>Roy</h3>
@@ -139,10 +139,10 @@
                 <img src="img/avatar-player/samus.png" alt="Samus">
                 <div>
                     <h3>Samus</h3>
-                    <p>Samus Aran is the toughest bounty hunter in the galaxy.  Using a special suit powered by the technology of the bird people which allows her to execute daring acrobatic feats, Samus pursues the airborne life form, Metroid, throughout the universe.  When inside her Power Suit, she boasts a high special, great defenses, and high attack power, but at the expense of low speed.</p>
+                    <p>Samus Aran is the toughest bounty hunter in the galaxy, the orphaned sole survivor of a Space Pirate raid that destroyed an Earth colony named K-2L.  Using a special suit powered by the technology of Chozo race and infused with their enhanced blood which allows her to execute daring acrobatic feats, Samus pursues the airborne life form, Metroid, throughout the universe.  She's cleared the planet Zebes of such Metroid infestation.  When inside her Power Suit, she boasts a high special attack, great defenses, and high attack power, but at the expense of low speed.</p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Sheik')">
+            <a href="#" onclick="GameMaster.setGameStart('Sheik')">
                 <img src="img/avatar-player/sheik.png" alt="Sheik">
                 <div>
                     <h3>Sheik</h3>
@@ -153,14 +153,14 @@
                 <img src="img/avatar-player/yoshi.png" alt="Yoshi">
                 <div>
                     <h3>Yoshi</h3>
-                    <p>Yoshi is the friendly dinosaur of Yoshi's Island. He began as Mario's partner, but has since built his own identity, and now appears in many games. He uses his unique ability to turn whatever he swallows into an egg as his foremost attack. Yoshis come in a rainbow cloud of colors and are said to have a high IQ from a very early age.  While his attack stat is his highest, Yoshi's stats overall aren't all that high.</p>
+                    <p>Yoshi is the gentle, friendly, fleet-of-foot dinosaur of idyllic Yoshi's Island. He began as Mario's partner, but has since built his own identity, and now appears in many games. He uses his unique ability to turn whatever he swallows into an egg as his foremost attack, thanks to his adhesive tongue and bottomless belly which allows him to eat anything. Yoshis come in a rainbow of colors and are said to have a high IQ from a very early age.  But while Yoshi's attack stat is his highest, his stats overall aren't all that impressive.</p>
                 </div>
             </a>
-            <a href="#" onclick="GameMaster.setGameStary('Zelda')">
+            <a href="#" onclick="GameMaster.setGameStart('Zelda')">
                 <img src="img/avatar-player/zelda.png" alt="Zelda">
                 <div>
                     <h3>Zelda</h3>
-                    <p></p>
+                    <p>The princess of Hyrule.  Zelda entrusted Link with the future of Hyrule after a revelation came to her in the world of dreams.  She knows much about the Triforce; in fact, the only person who likely knows more about Triforce lore is Ganondorf himself, whom Zelda evaded in Ocarina of Time by transforming into her alter ego, Sheik.  That said, Zelda is more of a defensive fighter, and ever her special attack stat is nothing to brag about.</p>
                 </div>
             </a>
         </div>
